# minimemo

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/main/: main.js
src/renderer/: index.html  overview.html  overview.js  renderer.js  style.css
